[package]
name = "tickle"
authors = ["pinkforest"]
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[[bin]]
name = "tickle-core"
path = "src/tickle-core/main.rs"

[[bin]]
name = "tickle-pt"
path = "src/tickle-pt/main.rs"

[dependencies]
tonic = "0.6"
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4" }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.9"
prost-types = "0.9"
console-subscriber = "0.1.0"

[build-dependencies]
tonic-build = "0.6"

[build]
rustflags = ["--cfg", "tokio_unstable"]
